--- a/Intelligent Image(CoreML)/Info.plist
+++ b/Intelligent Image(CoreML)/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To Choose a Photo!</string>
 </dict>
 </plist>
